Adding riscv init design

--- a/openlane/user_project_wrapper/config.json
+++ b/openlane/user_project_wrapper/config.json
@@ -7,22 +7,22 @@
 		"dir::../../verilog/rtl/user_project_wrapper.v"
 	],
 	"CLOCK_PORT": "wb_clk_i",
-	"CLOCK_NET": "mprj.clk",
+	"CLOCK_NET": "riscv_top.clk",
 	"CLOCK_PERIOD": 25,
 	"MACRO_PLACEMENT_CFG": "dir::macro.cfg",
 	"VERILOG_FILES_BLACKBOX": [
-		"dir::../../verilog/gl/user_proj_example.v"
+		"dir::../../verilog/gl/riscv_top.v"
 	],
-	"EXTRA_LEFS": "dir::../../lef/user_proj_example.lef",
-	"EXTRA_GDS_FILES": "dir::../../gds/user_proj_example.gds",
-	"EXTRA_LIBS": "dir::../../lib/user_proj_example.lib",
+	"EXTRA_LEFS": "dir::../../lef/riscv_top.lef",
+	"EXTRA_GDS_FILES": "dir::../../gds/riscv_top.gds",
+	"EXTRA_LIBS": "dir::../../lib/riscv_top.lib",
 	"EXTRA_SPEFS": [
-		"user_proj_example",
-		"dir::../../spef/multicorner/user_proj_example.min.spef",
-		"dir::../../spef/multicorner/user_proj_example.nom.spef",
-		"dir::../../spef/multicorner/user_proj_example.max.spef"
+		"riscv_top",
+		"dir::../../spef/multicorner/riscv_top.min.spef",
+		"dir::../../spef/multicorner/riscv_top.nom.spef",
+		"dir::../../spef/multicorner/riscv_top.max.spef"
 	],
-	"FP_PDN_MACRO_HOOKS": "mprj vdd vss vdd vss",
+	"FP_PDN_MACRO_HOOKS": "riscv_top vdd vss vdd vss",
 	"QUIT_ON_SYNTH_CHECKS": 0,
 	"FP_PDN_CHECK_NODES": 0,
 	"SYNTH_ELABORATE_ONLY": 1,
