Updating Makefile used for checks

--- a/openlane/Makefile
+++ b/openlane/Makefile
@@ -22,7 +22,7 @@ designs = $(shell find * -maxdepth 0 -type d)
 current_design = null
 
 ROOTLESS ?= 0
-# USER_ARGS = -u $$(id -u $$USER):$$(id -g $$USER)
+USER_ARGS = -u $$(id -u $$USER):$$(id -g $$USER)
 ifeq ($(ROOTLESS), 1)
 	USER_ARGS =
 endif
@@ -67,7 +67,7 @@ list:
 
 .PHONY: $(designs)
 $(designs) : export current_design=$@
-$(designs) : % : ./%/config.tcl
+$(designs) : % : ./%/config.json
 ifneq (,$(wildcard ./$(current_design)/interactive.tcl))
 	$(docker_run) \
 		$(OPENLANE_IMAGE_NAME) sh -c $(openlane_cmd_interactive)
