Updating all designs and configs for digital part

--- a/openlane/user_project_wrapper/macro.cfg
+++ b/openlane/user_project_wrapper/macro.cfg
@@ -1,1 +1,5 @@
-serv_rf_top 1250 1100 N
+wb_buttons_leds      2800 1250 N
+temp_sensor          2700 1550 N
+u_pinmux             200  200  S
+u_peri               1350 200  S
+u_uart_i2c_usb_spi   1750 200  S
