--- a/lvs/wb_buttons_leds/lvs_config.json
+++ b/lvs/wb_buttons_leds/lvs_config.json
@@ -5,9 +5,7 @@
         ""
     ],
     "EXTRACT_ABSTRACT": [
-        "*__fill_*",
-        "*__fakediode_*",
-        "*__tapvpwrvgnd_*"
+        "*__fill_*"
     ],
     "LVS_FLATTEN": [
         "*"
