Updating some config for lvs

--- a/lvs/user_project_wrapper/lvs_config.json
+++ b/lvs/user_project_wrapper/lvs_config.json
@@ -2,7 +2,7 @@
     "TOP_SOURCE": "user_project_wrapper",
     "TOP_LAYOUT": "$TOP_SOURCE",
     "EXTRACT_FLATGLOB": [
-        ""
+        "analog_wrapper"
     ],
     "EXTRACT_ABSTRACT": [
         "*__fill_*"
