--- a/openlane/user_project_wrapper/macro.cfg
+++ b/openlane/user_project_wrapper/macro.cfg
@@ -5,3 +5,4 @@ u_peri               1400  450   N
 u_uart_i2c_usb_spi   1750  500   N
 analog_wrapper       200   1550  N
 mabrains_logo        1200  1100  N
+DSM_core             1400  150   N
